# anthropic-export-viewer

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements-dev.txt
docs/: DATA_DICTIONARY.md
src/: app.py  config.py  models.py  requirements.txt
src/templates/: analytics.html  base.html  conversations.html  export.html  index.html  projects.html  stats.html  upload.html
tests/: __init__.py  conftest.py  test_app.py  test_config.py  test_models.py
tests/integration/: test_data_processor.py
